# swarmlens

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-ci.yml
swarmlens/: cli.py
swarmlens/dashboard/: server.py
swarmlens/demo_data/case_alpha/: accounts.csv  interactions.csv  posts.csv
swarmlens/engine/: analyzer.py  utils.py
swarmlens/io/: loaders.py
swarmlens/reporting/: html_writer.py  json_writer.py
tests/: test_core.py
